Fixed social media icons from looking cut off.

--- a/src/components/Footer.css
+++ b/src/components/Footer.css
@@ -15,15 +15,15 @@
   padding-right: 20px;
 }
 
-.social-media-icons svg {
-  background-color: unset;
-  padding-left: 10px;
-  padding-right: 10px;
-  margin-top: 64px;
+.social-media-icons a {
+  color: #fff;
+  font-size: 30px;
   margin-left: 5px;
   margin-right: 5px;
-  width: 10px;
-  height: 10px;
+}
+
+.social-media-icons {
+  margin-top: 20px;
 }
 
 .footer-subtext {
@@ -41,11 +41,8 @@
     font-size: 10pt;
   }
 
-  .social-media-icons svg {
-    margin-left: 0;
-    margin-right: 0;
-    width: 5px;
-    height: 5px;
+  .social-media-icons a {
+    font-size: 25px;
   }
 }
 
@@ -55,7 +52,7 @@
     padding-bottom: 0;
   }
 
-  .social-media-icons svg {
-    margin-right: 10px;
+  .social-media-icons {
+    margin-left: 16px;
   }
 }
